# phig

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  devenv.nix
plans/: 000-INDEX.md  001-scan-database.md  002-duplicate-detection.md  003-organize.md  004-purge.md  005-track-copies.md  006-api-layer.md  007-tui-gui.md  008-search.md  009-watch.md  010-face-recognition.md  011-tags-events.md  011-tags-galleries.md  012-blur-detection.md  013-geo-search.md  014-thumbs.md  015-video-support.md  016-favorites.md
src/: database.cpp  database.h  exif.cpp  exif.h  faces.cpp  faces.h  filters.cpp  filters.h  hasher.cpp  hasher.h  main.cpp  models.cpp  models.h  scanner.cpp  scanner.h  thumbs.cpp  thumbs.h  types.h
tests/: test_database.cpp  test_exif.cpp  test_faces.cpp  test_hasher.cpp  test_organize.cpp  test_porcelain.cpp  test_scanner.cpp  test_thumbs.cpp
